[package]
name = "recap-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-slice-vec = "0.10.0"
nom = { version = "7.1.3", default-features = false }
nom_locate = { version = "4.1.0", default-features = false }
